# PicoProject

./: .gitignore  Bindings.md  CMakeLists.txt  README.md  config.json  configure.py  configure.sh  install.sh  main.c  pyproject.toml  requirements.txt
docs/: PicoProject.drawio
include/: LCDScript.h  ProjectConfig.h  ProjectConfig.h.in  bindings.h  config.h  paintAPI.h
mods/time/: time.c  time.h
src/: ImageDat.c  LCDScript.c  config.c  paintAPI.c
tests/: test_image.py  test_json.py  test_one.json
tests/data/: image_replace_one.c  test_one.json  test_two.json
